test-package-compiler/src/snapshots/test_package_compiler__generated_tests__empty_module_warning.snap
---
source: test-package-compiler/src/generated_tests.rs
expression: "./cases/empty_module_warning"
---
//// /out/lib/the_package/_gleam_artefacts/empty.abstr
<291 byte binary>

//// /out/lib/the_package/_gleam_artefacts/empty.cache
<.cache binary>

//// /out/lib/the_package/_gleam_artefacts/empty.cache_meta
<28 byte binary>

//// /out/lib/the_package/_gleam_artefacts/internal.abstr
<541 byte binary>

//// /out/lib/the_package/_gleam_artefacts/internal.cache
<.cache binary>

//// /out/lib/the_package/_gleam_artefacts/internal.cache_meta
<32 byte binary>

//// /out/lib/the_package/_gleam_artefacts/private.abstr
<297 byte binary>

//// /out/lib/the_package/_gleam_artefacts/private.cache
<.cache binary>

//// /out/lib/the_package/_gleam_artefacts/private.cache_meta
<31 byte binary>

//// /out/lib/the_package/_gleam_artefacts/public.abstr
<605 byte binary>

//// /out/lib/the_package/_gleam_artefacts/public.cache
<.cache binary>

//// /out/lib/the_package/_gleam_artefacts/public.cache_meta
<31 byte binary>

//// /out/lib/the_package/ebin/empty.beam
<0 byte binary>

//// /out/lib/the_package/ebin/empty_module_warning.app
{application, empty_module_warning, [
    {vsn, "1.0.0"},
    {applications, [gleam_stdlib]},
    {description, "Test package with empty modules"},
    {modules, [empty,
               internal,
               private,
               public]},
    {registered, []}
]}.


//// /out/lib/the_package/ebin/internal.beam
<0 byte binary>

//// /out/lib/the_package/ebin/private.beam
<0 byte binary>

//// /out/lib/the_package/ebin/public.beam
<0 byte binary>

//// Warning
warning: Empty module

Module 'empty' contains no public definitions.

Hint: You can safely remove this module.



//// Warning
warning: Unused private function
  ┌─ src/private.gleam:4:1
  │
4 │ fn private_function() -> Nil {
  │ ^ This private function is never used

Hint: You can safely remove it.
