test-package-compiler/src/snapshots/test_package_compiler__generated_tests__import_shadowed_name_warning.snap
---
source: test-package-compiler/src/generated_tests.rs
expression: "./cases/import_shadowed_name_warning"
---
//// /out/lib/the_package/_gleam_artefacts/one.abstr
<353 byte binary>

//// /out/lib/the_package/_gleam_artefacts/one.cache
<.cache binary>

//// /out/lib/the_package/_gleam_artefacts/one.cache_meta
<31 byte binary>

//// /out/lib/the_package/_gleam_artefacts/two.abstr
<759 byte binary>

//// /out/lib/the_package/_gleam_artefacts/two.cache
<.cache binary>

//// /out/lib/the_package/_gleam_artefacts/two.cache_meta
<70 byte binary>

//// /out/lib/the_package/ebin/importy.app
{application, importy, [
    {vsn, "0.1.0"},
    {applications, []},
    {description, ""},
    {modules, [one,
               two]},
    {registered, []}
]}.


//// /out/lib/the_package/ebin/one.beam
<0 byte binary>

//// /out/lib/the_package/ebin/two.beam
<0 byte binary>

//// Warning
warning: Unused private constructor
   ┌─ src/two.gleam:12:3
   │
12 │   Port
   │   ^ This private constructor is never used

Hint: You can safely remove it.



//// Warning
warning: Unused private type
   ┌─ src/two.gleam:10:1
   │
10 │ type Shadowing {
   │ ^ This private type is never used

Hint: You can safely remove it.
