test-package-compiler/src/snapshots/test_package_compiler__generated_tests__imported_external_fns.snap
---
source: test-package-compiler/src/generated_tests.rs
expression: "./cases/imported_external_fns"
---
//// /out/lib/the_package/_gleam_artefacts/one.abstr
<770 byte binary>

//// /out/lib/the_package/_gleam_artefacts/one.cache
<.cache binary>

//// /out/lib/the_package/_gleam_artefacts/one.cache_meta
<44 byte binary>

//// /out/lib/the_package/_gleam_artefacts/three.abstr
<776 byte binary>

//// /out/lib/the_package/_gleam_artefacts/three.cache
<.cache binary>

//// /out/lib/the_package/_gleam_artefacts/three.cache_meta
<44 byte binary>

//// /out/lib/the_package/_gleam_artefacts/two.abstr
<5857 byte binary>

//// /out/lib/the_package/_gleam_artefacts/two.cache
<.cache binary>

//// /out/lib/the_package/_gleam_artefacts/two.cache_meta
<246 byte binary>

//// /out/lib/the_package/ebin/importy.app
{application, importy, [
    {vsn, "0.1.0"},
    {applications, []},
    {description, ""},
    {modules, [one,
               three,
               two]},
    {registered, []}
]}.


//// /out/lib/the_package/ebin/one.beam
<0 byte binary>

//// /out/lib/the_package/ebin/three.beam
<0 byte binary>

//// /out/lib/the_package/ebin/two.beam
<0 byte binary>
