test-package-compiler/src/snapshots/test_package_compiler__generated_tests__javascript_import.snap
---
source: test-package-compiler/src/generated_tests.rs
expression: "./cases/javascript_import"
---
//// /out/lib/the_package/_gleam_artefacts/one@two.cache
<.cache binary>

//// /out/lib/the_package/_gleam_artefacts/one@two.cache_meta
<31 byte binary>

//// /out/lib/the_package/_gleam_artefacts/two.cache
<.cache binary>

//// /out/lib/the_package/_gleam_artefacts/two.cache_meta
<43 byte binary>

//// /out/lib/the_package/gleam.d.mts
export * from "../prelude.mjs";
export type * from "../prelude.d.mts";


//// /out/lib/the_package/gleam.mjs
export * from "../prelude.mjs";


//// /out/lib/the_package/one/two.d.mts
import type * as _ from "../gleam.d.mts";

export class A extends _.CustomType {}
export function A$A(): A$;
export function A$isA(value: any): value is A$;

export type A$ = A;


//// /out/lib/the_package/one/two.mjs
/// <reference types="./two.d.mts" />
import { CustomType as $CustomType } from "../gleam.mjs";

export class A extends $CustomType {}
export const A$A$const = new A();
export const A$A = () => A$A$const;
export const A$isA = (value) => value instanceof A;


//// /out/lib/the_package/two.d.mts
import type * as $two from "./one/two.d.mts";

export const x: $two.A$;


//// /out/lib/the_package/two.mjs
/// <reference types="./two.d.mts" />
import * as $two from "./one/two.mjs";

export const x = $two.A$A$const;
